<resources>
    <string name="app_name" translatable="false">RabbitMQ Management</string>
    <string name="settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>Never</item>
        <item>10 seconds</item>
        <item>30 seconds</item>
        <item>60 seconds</item>
        <item>5 minutes</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>-1</item>
        <item>10</item>
        <item>30</item>
        <item>60</item>
        <item>300</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications" translatable="false">Notifications</string>

    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>

    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>

    <string name="pref_title_vibrate" translatable="false">Vibrate</string>
    <string name="communicate" translatable="false">Communicate</string>
    <string name="connect" translatable="false">Connect</string>

    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="value">Value</string>

    <string name="overview">Overview</string>
    <string name="queues">Queues</string>
    <string name="total">Total</string>
    <string name="unacked">Unacked</string>
    <string name="ready">Ready</string>
    <string name="connections" translatable="false">Connections</string>
    <string name="channels" translatable="false">Channels</string>
    <string name="exchanges" translatable="false">Exchanges</string>
    <string name="consumers" translatable="false">Consumers</string>
    <string name="select_profile">Select profile</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="apply">Apply</string>
    <string name="apply_save">Apply and save</string>
    <string name="cancel">Cancel</string>
    <string name="profile">Profile</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="select">Select</string>
    <string name="current_profile">Current profile: %s</string>
    <string name="profile_select_info" translatable="false">(%s @ %s)</string>
    <string name="api_error_queues">Get queues error (%s)</string>
    <string name="api_error_overview">Get overview error (%s)</string>
    <string name="api_error_connections">Get connections error (%s)</string>
    <string name="api_error_channels">Get channels error (%s)</string>
    <string name="credentials_not_specified">Credentials not specified</string>
    <string name="profile_null">Profile not specified</string>
    <string name="profile_not_selected">Profile not selected</string>
    <string name="update_in_progress">Updating data</string>
    <string name="remember">Remember</string>
    <string name="remember_credentials">Remember credentials</string>

    <string name="filter">Filter</string>
    <string name="filter_queues">Filter queues</string>
    <string name="filter_use_regex">Use regex</string>

    <string name="order">Order</string>
    <string name="sort_enable">Enable sorting</string>
    <string name="sort_queues">Filter queues</string>
    <string name="sort_by_name">By name</string>
    <string name="sort_by_ready">By ready</string>
    <string name="sort_by_unacked">By unacked</string>
    <string name="sort_by_total">By total</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>

    <string name="rabbit" translatable="false">RabbitMQ</string>
    <string name="cluster">Cluster</string>
    <string name="erlang" translatable="false">Erlang</string>
    <string name="vhost" translatable="false">VHost</string>
    <string name="user" translatable="false">User</string>
    <string name="state">State</string>
    <string name="prefetch" translatable="false">Prefetch count</string>
    <string name="select_saved">Select saved</string>
    <string name="durable" translatable="false">Durable</string>

    <string name="apply_selected">Apply selected (%s)</string>

    <!--queue detail-->
    <string name="message_bytes" translatable="false">Messages persistent bytes</string>
    <string name="message_bytes_ram" translatable="false">Messages bytes in memory</string>
    <string name="message_bytes_ready" translatable="false">Messages bytes ready</string>
    <string name="message_bytes_unacked" translatable="false">Messages bytes unacked</string>
    <string name="messages_ram" translatable="false">Messages in memory</string>
    <string name="messages_ready_ram" translatable="false">Messages ready in memory</string>
    <string name="messages_unacked_ram" translatable="false">Messages unacked in memory</string>
    <string name="messages_persistent" translatable="false">Messages persistent</string>

    <!--connection-->
    <string name="timeout">Timeout</string>
    <string name="heartbeat" translatable="false">Heartbeat</string>
    <string name="protocol">Protocol</string>
    <string name="connected_at">Connected at</string>
    <string name="channel_max" translatable="false">Channel limit</string>
    <string name="authentication">Authentication</string>
    <string name="node" translatable="false">Node</string>
    <string name="ssl" translatable="false">SSL</string>
    <string name="ssl_hash" translatable="false">SSL hash</string>
    <string name="ssl_cipher" translatable="false">SSL cipher</string>
    <string name="ssl_key_exchange" translatable="false">SSL key exchange</string>
    <string name="ssl_protocol" translatable="false">SSL protocol</string>
    <string name="type">Type</string>

    <string name="product">Product</string>
    <string name="version">Version</string>
    <string name="platform">Platform</string>
    <string name="copyright" translatable="false">Copyright</string>
    <string name="information">Information</string>


    <!--channel-->
    <string name="reductions" translatable="false">Reductions</string>
    <string name="number" translatable="false">Number</string>
    <string name="confirm">Confirm</string>
    <string name="transactional">Transactional</string>
    <string name="idle_since">Idle since</string>

    <string name="global_prefetch_count" translatable="false">Global prefetch count</string>
    <string name="prefetch_count" translatable="false">Prefetch count</string>
    <string name="acks_uncommitted" translatable="false">Acks uncommitted</string>
    <string name="messages_uncommitted" translatable="false">Messages uncommitted</string>
    <string name="messages_unconfirmed" translatable="false">Messages unconfirmed</string>
    <string name="messages_unacked" translatable="false">Messages unacked</string>
    <string name="consumer_count">Consumer count</string>
    <string name="pref_load_on_open">Load data when opening section</string>
    <string name="pref_save_active_profile">Remember active profile</string>
    <string name="pref_save_active_filter">Remember active filter</string>
    <string name="pref_save_active_sort">Remember active sort</string>

    <string name="policy_text">
        Privacy policy\n
        \n
        Current version https://www.dropbox.com/s/ofcox96um1t6imp/RMQ_Management.txt?dl=0\n
        \n
        Last modified: November 26, 2017\n
        \n
        What information we collect\n
            To use the application, you do not need to create an account.\n
            The app does not collect any personal information and does not transmit any information to other devices or services.\n
            The local store contains data related only application functionality.\n
            No information about the device is not going.\n
            The required permission (to use the network) is necessary to make api calls.\n
        \n
        Changes to this provision on the protection of personal data\n
        \n
            We may change this policy from time to time, and if we do we’ll post any changes in the update information in the application and the website that hosts the application. If you continue to use application after those changes are in effect, you agree to the revised policy. If the changes are significant, we may provide more prominent notice or get your consent as required by law.\n
            \n
        Contact Information\n
            Questions, suggestions, comments and reviews about the current state of the protection of personal inform at: kolosmiler@gmail.com.\n
    </string>
    <string name="policy">Privacy policy</string>

</resources>
