<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:layout_margin="5dp"
    >

    <TextView
        android:id="@+id/queue_name"
        style="@style/listRowItemFirst"
        android:text="@string/name"
        />
    <TextView
        android:id="@+id/ch_vhost"
        style="@style/listRowItem"
        android:text="@string/vhost"
        />
    <TextView
        android:id="@+id/ch_user"
        style="@style/listRowItem"
        android:text="@string/user"
        />
    <TextView
        android:id="@+id/ch_state"
        style="@style/listRowItem"
        android:text="@string/state"
        />
    <TextView
        android:id="@+id/ch_prefetch"
        style="@style/listRowItem"
        android:text="@string/prefetch"
        />

</LinearLayout>