<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/overview"/>
        <item
            android:id="@+id/nav_queues"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/queues"/>
        <item
            android:id="@+id/nav_connections"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/connections"/>
        <item
            android:id="@+id/nav_channels"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/channels"/>
        <!--<item-->
            <!--android:id="@+id/nav_exchanges"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="@string/exchanges"/>-->
        <!--<item-->
            <!--android:id="@+id/nav_admin"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="@string/overview"/>-->
    </group>

    <!--<item android:title="@string/communicate">-->
    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/settings"/>
        </menu>
    </item>

</menu>
