<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:layout_margin="5dp"
    >

    <TextView
        android:id="@+id/queue_name"
        style="@style/queueListRowItem"
        android:layout_weight="0.8"
        android:text="@string/name"
        />
    <TextView
        android:id="@+id/queue_ready"
        style="@style/queueListRowItem"
        android:layout_weight="1"
        android:text="@string/ready"
        />
    <TextView
        android:id="@+id/queue_unacked"
        style="@style/queueListRowItem"
        android:layout_weight="1"
        android:text="@string/unacked"
        />
    <TextView
        android:id="@+id/queue_total"
        style="@style/queueListRowItem"
        android:layout_weight="1"
        android:text="@string/total"
        />

</LinearLayout>