<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_queues"
        android:gravity="center"
        android:layout_margin="@dimen/edit_text_margin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <CheckBox
        android:id="@+id/sort_enabled"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:text="@string/sort_enable"
        style="?android:attr/textAppearanceSmall"
        />

    <LinearLayout
        android:id="@+id/sort_parameters"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <RadioGroup
            android:id="@+id/sort_ascending_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/sort_asc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ascending"
                />

            <RadioButton
                android:id="@+id/sort_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/descending"
                />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/sort_type_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </LinearLayout>
</LinearLayout>