<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_queues"
        android:gravity="center"
        android:layout_margin="@dimen/edit_text_margin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <EditText
        android:id="@+id/filter_value"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="text"
        android:hint="@string/value"
        android:layout_margin="@dimen/edit_text_margin"
        tools:ignore="LabelFor"
        />

    <CheckBox
        android:id="@+id/filter_use_regex"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:text="@string/use_regex"
        style="?android:attr/textAppearanceSmall"
        />

    <CheckBox
        android:id="@+id/filter_save"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:text="@string/remember"
        style="?android:attr/textAppearanceSmall"
        />

</LinearLayout>